--- a/charts/microservice-chart/templates/ingress.yaml
+++ b/charts/microservice-chart/templates/ingress.yaml
@@ -12,6 +12,12 @@ metadata:
     {{- with .Values.ingress.annotations }}
 {{ toYaml . | indent 4 }}
     {{- end }}
+    {{- if and .Values.canaryDelivery.create  }}
+    nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.canaryDelivery.ingress.weightPercent |quote }}
+    nginx.ingress.kubernetes.io/canary-by-header: {{ .Values.canaryDelivery.ingress.headerName |quote }}
+    nginx.ingress.kubernetes.io/canary-by-header-value: {{ .Values.canaryDelivery.ingress.headerValue |quote }}
+    {{- end }}
 spec:
   ingressClassName: nginx
   rules:
