--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.azureSecretProvider.create -}}
+{{- if .Values.secretProvider.create -}}
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
@@ -12,12 +12,12 @@ spec:
     - secretName: {{ include "microservice-chart.fullname" $ }}
       type: Opaque
       data:
-      {{- range $key, $objectName := .Values.azureSecretProvider.envSecrets }}
+      {{- range $key, $objectName := .Values.secretProvider.envSecrets }}
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
       {{- end }}
-      {{- if .Values.azureVolumeMount.create }}
-      {{- range $key, $objectName := .Values.azureVolumeMount.envSecrets }}
+      {{- if .Values.providedVolumeMount.create }}
+      {{- range $key, $objectName := .Values.providedVolumeMount.envSecrets }}
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
       {{- end }}
@@ -26,19 +26,19 @@ spec:
     usePodIdentity: "true"
     useVMManagedIdentity: "false"
     userAssignedIdentityID: ""
-    keyvaultName: {{ .Values.azureSecretProvider.keyvault.name }}
-    tenantId: {{ .Values.azureSecretProvider.keyvault.tenantId }}
+    keyvaultName: {{ .Values.secretProvider.keyvault.name }}
+    tenantId: {{ .Values.secretProvider.keyvault.tenantId }}
     cloudName: ""
     objects: |
       array:
-        {{- range $key, $objectName := .Values.azureSecretProvider.envSecrets }}
+        {{- range $key, $objectName := .Values.secretProvider.envSecrets }}
         - |
           objectName: {{ $objectName }}
           objectType: secret
           objectVersion: ""
         {{- end }}
-        {{- if .Values.azureVolumeMount.create }}
-        {{- range $key, $objectName := .Values.azureVolumeMount.envSecrets }}
+        {{- if .Values.providedVolumeMount.create }}
+        {{- range $key, $objectName := .Values.providedVolumeMount.envSecrets }}
         - |
           objectName: {{ $objectName }}
           objectType: secret
