added CANARY:true config map if canary deployment

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -194,7 +194,7 @@ ingress:
 
 # -- This section allow to configure canary deployment
 # @default -- -
-canaryDelivery: &canaryDelivery
+canaryDelivery:
   # -- (bool) Beta/Enable Canary/BlueGreen Deployment
   create: false
   # -- This section allow to configure ingress inside canary deployment
