added example in simple-2-deps-microservice using 3.0.0 chart version

--- a/charts/microservice-chart/templates/configmap.yaml
+++ b/charts/microservice-chart/templates/configmap.yaml
@@ -1,4 +1,4 @@
-{{- if or .Values.envConfig .Values.configMapFromFile -}}
+{{- if or .Values.envConfig .Values.configMapFromFile .Values.canaryDelivery.create -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
