--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.secretProviderClass.create (or .Values.envSecret .Values.fileShare.create) -}}
+{{- if .Values.secretProvider.create -}}
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
@@ -12,39 +12,37 @@ spec:
     - secretName: {{ include "microservice-chart.fullname" $ }}
       type: Opaque
       data:
-      {{- range $key, $objectName := .Values.envSecret }}
+      {{- range $key, $objectName := .Values.secretProvider.envSecrets }}
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
       {{- end }}
-      {{- if .Values.fileShare.create }}
-      - key: azurestorageaccountname
-        objectName: azurestorageaccountname
-      - key: azurestorageaccountkey
-        objectName: azurestorageaccountkey
+      {{- if .Values.providedVolumeMount.create }}
+      {{- range $key, $objectName := .Values.providedVolumeMount.envSecrets }}
+      - key: {{ $objectName }}
+        objectName: {{ $objectName }}
+      {{- end }}
       {{- end }}
   parameters:
     usePodIdentity: "true"
     useVMManagedIdentity: "false"
     userAssignedIdentityID: ""
-    keyvaultName: {{ .Values.keyvault.name }}
-    tenantId: {{ .Values.keyvault.tenantId }}
+    keyvaultName: {{ .Values.secretProvider.keyvault.name }}
+    tenantId: {{ .Values.secretProvider.keyvault.tenantId }}
     cloudName: ""
     objects: |
       array:
-        {{- range $key, $objectName := .Values.envSecret }}
+        {{- range $key, $objectName := .Values.secretProvider.envSecrets }}
         - |
           objectName: {{ $objectName }}
           objectType: secret
           objectVersion: ""
         {{- end }}
-        {{- if .Values.fileShare.create }}
+        {{- if .Values.providedVolumeMount.create }}
+        {{- range $key, $objectName := .Values.providedVolumeMount.envSecrets }}
         - |
-          objectName: azurestorageaccountname
+          objectName: {{ $objectName }}
           objectType: secret
           objectVersion: ""
-        - |
-          objectName: azurestorageaccountkey
-          objectType: secret
-          objectVersion: ""
+        {{- end }}
         {{- end }}
 {{- end }}
